Added first notes

--- a/Cards/Жизнь.md
+++ b/Cards/Жизнь.md
@@ -1,4 +1,6 @@
 up:: [[README.md]]
-tags:: 
+tags:: #рождение #смерть #процесс
 
 # Жизнь
+
+Жизнь представляет из себя процесс между рождением и смертью, во время которого можно воспринимать [[Мир|мир]]. 
