--- a/Cards/Чистая архитектура.md
+++ b/Cards/Чистая архитектура.md
@@ -1,3 +1,8 @@
+up:: [[Архитектура ПО]]
+tags:: #бизнес #структуры
+
+# Чистая архитектура
+
 **entities** - основные бизнес сущности
 **use_cases** - основные бизнес правила
 **interface_adapters** - преобразователи бизнес правил в сложные структуры и наоборот
