--- a/Cards/Компьютерные науки.md
+++ b/Cards/Компьютерные науки.md
@@ -1,4 +1,6 @@
 up:: [[Инженерные науки]]
-tags:: 
+tags:: #информация #объекты 
 
 # Компьютерные науки
+
+Науки, связанные с хранением, преобразованием и передачей информации между носителями
