--- a/Cards/Файловые системы.md
+++ b/Cards/Файловые системы.md
@@ -1,4 +1,6 @@
 up:: [[Операционные системы]]
-tags:: 
+tags:: #информация #диски #флешки
 
 # Файловые системы
+
+Способы организации информации на дисковых носителях и флешках
